Fixes theme-tooltip on mobile devices

--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -25,6 +25,7 @@
 }
 
 .theme-tooltip {
+  visibility: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -66,6 +67,10 @@
 
   .logo {
     margin: 0 auto;
+  }
+
+  .theme-tooltip {
+    visibility: visible;
   }
 }
 
